[gd_scene load_steps=6 format=2]

[ext_resource path="res://TruthTable.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.1586, 0.489627, 0.61, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.061, 0.4636, 0.61, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.552941, 0.6, 0.619608, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.376471, 0.545098, 0.607843, 1 )

[node name="TruthTable" type="AcceptDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1801.0
margin_bottom = -1016.0
focus_mode = 1
popup_exclusive = true
window_title = "Truth Table"
script = ExtResource( 1 )

[node name="Header1" type="Label" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 111.0
margin_bottom = 28.0
rect_min_size = Vector2( 80, 20 )
custom_styles/normal = SubResource( 1 )
custom_colors/font_color = Color( 0.839216, 0.839216, 0.839216, 1 )
text = "sdfsdf"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Header2" type="Label" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 111.0
margin_bottom = 28.0
rect_min_size = Vector2( 80, 20 )
custom_styles/normal = SubResource( 2 )
custom_colors/font_color = Color( 0.839216, 0.839216, 0.839216, 1 )
text = "sdfsdf"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cell1" type="Label" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 111.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 20 )
custom_styles/normal = SubResource( 3 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cell2" type="Label" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 111.0
margin_bottom = 28.0
rect_min_size = Vector2( 0, 20 )
custom_styles/normal = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Grid" type="GridContainer" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 111.0
margin_bottom = 28.0
custom_constants/vseparation = 2
custom_constants/hseparation = 2
columns = 3

[connection signal="mouse_exited" from="." to="." method="_on_TruthTable_mouse_exited"]
